# eudaq

./: .gitattributes  .gitignore  .gitignore.orig  .travis.yaml  .travis.yml  AUTHORS  CMakeCPack.cmake  CMakeCPackDarwin.cmake  CMakeCPackLinux.cmake  CMakeCPackOptions.cmake.in  CMakeCPackOptionsDarwin.cmake.in  CMakeCPackOptionsWindows.cmake.in  CMakeCPackWindows.cmake  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake.in  EUDAQ.files  EUDAQ.includes  KILLRUN  KILLRUN.datura  KILLRUN.local  Makefile  Makefile.common  README.c++11  README.how_to_release  README.md  README.release_notes  STARTRUN  STARTRUN.eudaq  STARTRUN.eudaq_mac  STARTRUN.fortis  STARTRUN.local  STARTRUN.miniTLU  STARTRUN.tlu  STARTRUN_all.sh  STARTRUN_cmshgcal.sh  STARTRUN_cmshgcal_dwc.sh  STARTRUN_cmshgcal_dwc_mcp.sh  STARTRUN_cmshgcal_mcp.sh  (+23 more)
doc/doxygen/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.dev  Doxyfile.in  Doxyfile_martin  Makefile
etc/pybindgen/: CMakeLists.txt  README  module-autoscan.py  py-runner.py  py_eudaq-gen.py  reader.py  run_dummydataproduction.py  startup.py  x
extra/nreader/: CMakeLists.txt
gui/: CMakeLists.txt  GUI_EUDAQ.sln  Makefile  README.md  common.pro  euLog.pro  euLog.vcxproj  euLog.vcxproj.filters  euProd.pro  euRun.pro  euRun.vcxproj  euRun.vcxproj.filters
gui/GeneratedFiles/: ui_LogDialog.h  ui_euLog.h  ui_euRun.h
gui/images/: euLog.icns  euLog.qrc  euMon.icns  euRun.qrc
gui/include/: Colours.hh  LogCollectorModel.hh  LogDialog.hh  RunControlModel.hh  euLog.hh  euProd.hh  euRun.hh  euRunApplication.h  scanHelper.hh
gui/src/: LogCollectorModel.cc  RunControlModel.cc  euLog.cc  euLog.cxx  euLog.rc  euProd.cc  euProd.cxx  euProd.rc  euRun.cc  euRun.cxx  euRun.rc  myeuRun.cc  scanHelper.cc
gui/ui/: LogDialog.ui  euLog.ui  euProd.ui  euRun.ui
lagacy/syncTest/: CMakeLists.txt
legacy/iphc/: CMakeLists.txt
legacy/offlinemon/: CMakeLists.txt
main/exe/: CMakeLists.txt
main/lib/: CMakeLists.txt
main/lycoris/: CMakeLists.txt
main/python/: CMakeLists.txt
monitors/cmshgcal_onlinemon/: CMakeLists.txt
monitors/corrymonitor/: CMakeLists.txt  README_CorryMonitor.md
monitors/offlinemon/: CMakeLists.txt
monitors/onlinemon/: CMakeLists.txt  script.C
monitors/rootmonitor/: CMakeLists.txt
nreader/: CMakeLists.txt
nreader/detdescription/: EUTelAPIXMCDetector.cc  EUTelCMSPixelDetector.cc  EUTelDEPFETDetector.cc  EUTelFortisDetector.cc  EUTelMimoTelDetector.cc  EUTelMimosa18Detector.cc  EUTelMimosa26Detector.cc  EUTelRD53ADetector.cc  EUTelSetupDescription.cc  EUTelTLUDetector.cc  EUTelTakiDetector.cc  EUTelTimepixDetector.cc
nreader/include/: EUTelAPIXMCDetector.h  EUTelBaseDetector.h  EUTelCMSPixelDetector.h  EUTelDEPFETDetector.h  EUTelFortisDetector.h  EUTelMimoTelDetector.h  EUTelMimosa18Detector.h  EUTelMimosa26Detector.h  EUTelNativeReader.h  EUTelPixelDetector.h  EUTelRD53ADetector.h  EUTelSetupDescription.h  EUTelTLUDetector.h  EUTelTakiDetector.h  EUTelTimepixDetector.h
nreader/src/: EUTelAPIXMCDetector.cc  EUTelDEPFETDetector.cc  EUTelFortisDetector.cc  EUTelMimoTelDetector.cc  EUTelMimosa18Detector.cc  EUTelMimosa26Detector.cc  EUTelNativeReader.cc  EUTelSetupDescription.cc  EUTelTLUDetector.cc  EUTelTakiDetector.cc  EUTelTimepixDetector.cc
onlinemon/: CMakeLists.txt  Makefile
onlinemon/Documentation/: ConfigurationFileDocumentation.tex
onlinemon/include/: BaseCollection.hh  CheckEOF.hh  CorrelationCollection.hh  CorrelationHistos.hh  EUDAQMonitorCollection.hh  EUDAQMonitorHistos.hh  EventSanityChecker.hh  GraphWindow.hh  HitmapCollection.hh  HitmapHistos.hh  MonitorPerformanceCollection.hh  MonitorPerformanceHistos.hh  OnlineHistograms.hh  OnlineMon.hh  OnlineMonConfiguration.hh  OnlineMonWindow.hh  SimpleStandardCluster.hh  SimpleStandardEvent.hh  SimpleStandardHit.hh  SimpleStandardPlane.hh  SimpleStandardPlaneDouble.hh  TGraphSet.hh  TestEnvMon.hh  TreeHistoRelation.hh
onlinemon/src/: BaseCollection.cc  CheckEOF.cc  CorrelationCollection.cc  CorrelationHistos.cc  EUDAQMonitorCollection.cc  EUDAQMonitorHistos.cc  EventSanityChecker.cc  GraphWindow.cc  HitmapCollection.cc  HitmapHistos.cc  MonitorPerformanceCollection.cc  MonitorPerformanceHistos.cc  OnlineHistograms.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  OnlineMonWindow.cc  SimpleStandardEvent.cc  SimpleStandardPlane.cc  TGraphSet.cc  TreeHistoRelation.cc
producers/: CMakeLists.txt
producers/TimepixProducer/: FitParameters_2stepFit_v7-I10_W015.root  reset_usb.sh
producers/altro/: CMakeLists.txt  Makefile
producers/altroUSB/: CMakeLists.txt  Makefile
producers/bdaq53/: README.md
producers/calice/: CMakeLists.txt
producers/caliceahcalbif/: CMakeLists.txt
producers/cmspixel/: CMakeLists.txt
producers/depfet/: CMakeLists.txt  Makefile
producers/drs4/: CMakeLists.txt
producers/eudrb/: CMakeLists.txt  Makefile
producers/explorer/: CMakeLists.txt  README.md
producers/fortis/: CMakeLists.txt  Makefile
producers/load/: CMakeLists.txt
producers/mimoroma/: CMakeLists.txt
producers/mimosa26_sbg/: CMakeLists.txt
producers/mimosa32/: CMakeLists.txt
producers/miniTLU/: CMakeLists.txt  README
producers/mvd/: CMakeLists.txt  Makefile
producers/ni/: CMakeLists.txt  Makefile
producers/palpidefs/: CMakeLists.txt  README  README.md  test
producers/palpidess/: CMakeLists.txt  README.md  palpidess.conf  palpideteam.conf
producers/pi/: CMakeLists.txt  PIConfig1.conf  PIConfig2.conf  PIConfig3.conf  PIConfig4.conf  PIInit.init  README.md
producers/processor/: CMakeLists.txt
producers/root/: CMakeLists.txt
producers/rpi-controller/: CMakeLists.txt  README.md
producers/taki/: CMakeLists.txt  Makefile
producers/timepix3/: CMakeLists.txt
producers/timepix3producer/: CMakeLists.txt
producers/timepixdummy/: CMakeLists.txt
producers/tlu/: CMakeLists.txt  Makefile  README.firmware
producers/vme/: CMakeLists.txt
reSendProducer/: CMakeLists.txt  ResenderProducer.cxx  multiResender.h  resender.cpp
reSendProducer/inc/: multiResender.h  resender.h
syncTest/: CMakeLists.txt
user/: CMakeLists.txt
user/ITS3/: README.md  (+2 more)
(+2921 files in other folders)
