macro(optional_add_subdirectory dir)
  option(BUILD_${dir} "Build producer in directory ${dir}?" OFF)
  if(BUILD_${dir})
    add_subdirectory(${dir})
  endif()
endmacro()

#add_subdirectory(altro)
#add_subdirectory(altroUSB)
#add_subdirectory(depfet)
#add_subdirectory(eudrb)
#add_subdirectory(fortis)
#add_subdirectory(mimoroma)
#add_subdirectory(Mimosa32)
#add_subdirectory(mvd)
optional_add_subdirectory(ni)
#add_subdirectory(pixelmanproducer)
#add_subdirectory(taki)
#add_subdirectory(timepixdummy)
optional_add_subdirectory(tlu)
#add_subdirectory(vme)
