macro(optional_add_subdirectory dir)
  option(BUILD_${dir} "Build producer in directory ${dir}?" OFF)
  if(BUILD_${dir})
    add_subdirectory(${dir})
    MESSAGE( STATUS "Building producer: " ${dir} )
  endif()
endmacro()

optional_add_subdirectory(altro)
optional_add_subdirectory(altroUSB)
optional_add_subdirectory(depfet)
optional_add_subdirectory(eudrb)
optional_add_subdirectory(fortis)
optional_add_subdirectory(mimoroma)
optional_add_subdirectory(mimosa32)
optional_add_subdirectory(mvd)
optional_add_subdirectory(ni)
#optional_add_subdirectory(pixelmanproducer)
optional_add_subdirectory(taki)
optional_add_subdirectory(timepixdummy)
optional_add_subdirectory(tlu)

